--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 chrono = "0.4.38"
+gstreamer = "0.23.0"
+gstreamer-sys = "0.23.0"
 image = "0.25.2"
 num = "0.4.3"
 sea-orm = "1.0.0"
